@@ -788,6 +788,48 @@ function reskins.lib.assign_deferred_icons(mod, data_stage)
     end
 end
 
+function reskins.lib.composite_existing_icons_onto_icons_definition(name, composite_icon, params)
+    -- Check to ensure the object is available to copy from; abort if not
+    local source_type = params.type or "item"
+
+    -- Copy the current entity, return if it doesn't exist
+    if not data.raw[source_type][name] then return end
+    local entity = util.copy(data.raw[source_type][name])
+
+    -- Check for icons definition
+    if entity.icons then
+        -- Transcribe layers to the composite_icon table
+        for _, layer in pairs(entity.icons) do
+            local icon_size = layer.icon_size or entity.icon_size
+            table.insert(composite_icon, {
+                icon = layer.icon,
+                icon_size = icon_size,
+                icon_mipmaps = layer.icon_mipmaps or entity.icon_mipmaps,
+                tint = layer.tint,
+                scale = layer.scale and layer.scale * (params.scale or 1) or (32 / icon_size) * (params.scale or 1),
+                shift = {
+                    (layer.shift and (layer.shift[1] or layer.shift.x) or 0) * (params.scale or 1) + (params.shift and (params.shift[1] or params.shift.x) or 0),
+                    (layer.shift and (layer.shift[2] or layer.shift.y) or 0) * (params.scale or 1) + (params.shift and (params.shift[2] or params.shift.y) or 0),
+                }
+            })
+        end
+    -- Standard icon
+    else
+        -- Fully define an icons layer
+        table.insert(composite_icon, {
+            icon = entity.icon,
+            icon_size = entity.icon_size,
+            icon_mipmaps = entity.icon_mipmaps,
+            scale = params.scale and (params.scale * 32 / entity.icon_size) or (32 / entity.icon_size),
+            shift = {
+                (params.shift and (params.shift[1] or params.shift.x) or 0),
+                (params.shift and (params.shift[2] or params.shift.y) or 0),
+            }
+        })
+    end
+
+end
+
 function reskins.lib.composite_existing_icons(target_name, target_type, icons)
     -- icons = table of ["name"] = {type, shift, scale} or ["name"] = {icon or icons}, where type, shift, and scale are optional, and icon/icons ignores other param values
 
@@ -821,44 +863,7 @@ function reskins.lib.composite_existing_icons(target_name, target_type, icons)
                 tint = params.icon.tint,
             })
         else
-            -- Check to ensure the object is available to copy from; abort if not
-            local source_type = params.type or "item"
-
-            -- Copy the current entity, return if it doesn't exist
-            if not data.raw[source_type][name] then return end
-            local entity = util.copy(data.raw[source_type][name])
-
-            -- Check for icons definition
-            if entity.icons then
-                -- Transcribe layers to the composite_icon table
-                for _, layer in pairs(entity.icons) do
-                    local icon_size = layer.icon_size or entity.icon_size
-                    table.insert(composite_icon, {
-                        icon = layer.icon,
-                        icon_size = icon_size,
-                        icon_mipmaps = layer.icon_mipmaps or entity.icon_mipmaps,
-                        tint = layer.tint,
-                        scale = layer.scale or (32 / icon_size) * (params.scale or 1),
-                        shift = {
-                            (layer.shift and (layer.shift[1] or layer.shift.x) or 0) * (params.scale or 1) + (params.shift and (params.shift[1] or params.shift.x) or 0),
-                            (layer.shift and (layer.shift[2] or layer.shift.y) or 0) * (params.scale or 1) + (params.shift and (params.shift[2] or params.shift.y) or 0),
-                        }
-                    })
-                end
-            -- Standard icon
-            else
-                -- Fully define an icons layer
-                table.insert(composite_icon, {
-                    icon = entity.icon,
-                    icon_size = entity.icon_size,
-                    icon_mipmaps = entity.icon_mipmaps,
-                    scale = params.scale and (params.scale * 32 / entity.icon_size) or (32 / entity.icon_size),
-                    shift = {
-                        (params.shift and (params.shift[1] or params.shift.x) or 0),
-                        (params.shift and (params.shift[2] or params.shift.y) or 0),
-                    }
-                })
-            end
+            reskins.lib.composite_existing_icons_onto_icons_definition(name, composite_icon, params)
         end
     end
 
