@@ -2,6 +2,7 @@
 Version: 2.0.4
 Date: ????
   Changes:
+    - Moved code within `composite_existing_icons` into separate function `composite_existing_icons_onto_icons_definition`
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2021-09-29
